--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,21 @@
+header{
+    background-color: #ffffff;
+    border-color: #cccccc;
+}
+
+footer{
+    background-color: #666666;
+    border-top-color: #4aaaa5;
+    border-width: 30%;
+}
+
 h1{
     background-color: #4aaaa5;
     font-family: 'Georgia', Times, Times New Roman, serif;
+    padding: 20px;
+    width: 20%;
+    text-align: center;
+    color: #ffffff;
 }
 
 h2{
@@ -16,4 +31,8 @@ body{
     background-color: #ffffff;
     border-color: #dddddd;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+.maincontent{
+    width: 60%;
 }
