--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,37 @@
 header{
     background-color: #ffffff;
-    border-color: #cccccc;
-}
-
-footer{
-    background-color: #666666;
-    border-top-color: #4aaaa5;
-    border-width: 30%;
+    border-bottom: 5px solid #cccccc;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding-bottom: 0px;
 }
 
 h1{
     background-color: #4aaaa5;
     font-family: 'Georgia', Times, Times New Roman, serif;
-    padding: 20px;
-    width: 20%;
+    width: 25%;
     text-align: center;
+    padding: 20px;
     color: #ffffff;
+    float: left;
+    margin-left: 100px;
+}
+
+#links{
+    margin-right: 0;
+    right: 0;
+    position: fixed;
+    top: 50px;
+    right: 120px;
 }
 
 h2{
     color: #4aaaa5;
     font-family: 'Georgia', Times, Times New Roman, serif;
+    border-bottom: 3px solid #cccccc;
+    padding-bottom: 10px;
 }
 
 p{
@@ -28,11 +39,75 @@ p{
 }
 
 body{
-    background-color: #ffffff;
+    position: absolute;
+    top: 150px;
+    width: 100%;
     border-color: #dddddd;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 .maincontent{
-    width: 60%;
+    width: 940px;
+    background-color: #ffffff;
+    margin: 0 auto 0 auto;
+    min-height: 350px;
+    border: 1px solid #cccccc; 
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    margin-bottom: 80px;
+}
+
+a{
+    color: #777777;
+}
+
+#main-bio,
+#bio-image {
+    float: left;
+}
+
+#bio-image{
+    margin-right: 20px;
+    margin-bottom: 1.5px;
+}
+
+footer{
+    clear: both;
+    background-color: #666666;
+    border-top: 5px solid #4aaaa5;
+    color: #cccccc;
+    padding: 15px;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    margin-left: 0;
+    text-align: center;
+    text-align: bottom;
+}
+
+#about{
+    padding: 20px;
+    text-decoration: none;
+}
+
+#portfolio {
+    text-decoration: none;
+    padding: 20px;
+}
+
+#contact{
+    padding: 20px;
+    text-decoration: none;
+}
+
+#button{
+    background-color: #4aaaa5;
+    color: #ffffff;
+    padding: 5px 20px;
+}
+
+.form{
+    width: 100%;
 }
