--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ h1{
     float: left;
     margin-left: 100px;
     margin-bottom: 0px;
+    font-family: 'Quicksand', sans-serif;
 }
 
 #links{
@@ -36,10 +37,12 @@ h2{
     font-family: 'Georgia', Times, Times New Roman, serif;
     border-bottom: 3px solid #cccccc;
     padding-bottom: 10px;
+    font-family: 'Quicksand', sans-serif;
 }
 
 p{
   color: #777777;  
+  font-family: 'Quicksand', sans-serif;
 }
 
 body{
@@ -47,7 +50,7 @@ body{
     top: 150px;
     width: 100%;
     border-color: #dddddd;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .maincontent{
@@ -60,6 +63,7 @@ body{
     padding-right: 20px;
     padding-bottom: 20px;
     margin-bottom: 80px;
+    font-family: 'Quicksand', sans-serif;
 }
 
 a{
@@ -110,13 +114,22 @@ footer{
     background-color: #4aaaa5;
     color: #ffffff;
     padding: 5px 20px;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .form{
     width: 100%;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .images{
     width: 35%;
     margin: 10px;
+}
+
+h3{
+    background-color: #4aaaa5;
+    width: 100px;
+    padding: 30px;
+    text-align: center;
 }
